# kit_hoshyaripour

./: adsdownload.py  adsdownload_forecast.py  adsdownload_sbatch_job  dust_board_reviwed_automation.py  ifs2icon_vert.py
nachmo_coding-main/: .gitignore  .pre-commit-config.yaml  README.md  mo_art_nachmo_mlp.f90  mo_util_ftorch_api.f90  pyproject.toml  setup.cfg
nachmo_coding-main/KPP_python/: README.md
nachmo_coding-main/KPP_python/drv/: Initialize_py.py  binary_reader.py  driver.py  driver_verwer.py  general.f90  list_of_species.py  prepare_data_directory.py  stochiometry_matrix_reader.py
nachmo_coding-main/KPP_python/dynho/: driver.py  dynho.def  dynho.eqn  dynho.spc
nachmo_coding-main/KPP_python/src/: lex.yy.c  y.tab.c  y.tab.h
nachmo_coding-main/KPP_python/verwer/: verwer.def  verwer.eqn  verwer.kpp  verwer.spc
nachmo_coding-main/NACHMO-F/: CMakeLists.txt  CONTRIBUTORS.md
nachmo_coding-main/NACHMO-F/NACHMO_extra/: Weigths_converter.py  loop_run.sh
nachmo_coding-main/NACHMO-F/example/: example_NACHMO.f90
nachmo_coding-main/NACHMO-F/src/: loop_run.sh  mod_activation.f90  mod_kinds.f90  (+2 more)
nachmo_coding-main/kpp/: Makefile_dynho  builder.sr  dynho.def  dynho.eqn  dynho.kpp  dynho.map  dynho.spc  dynho_Function.f90  dynho_Global.f90  dynho_Hessian.f90  dynho_HessianSP.f90  dynho_Initialize.f90  dynho_Integrator.f90  dynho_Jacobian.f90  dynho_JacobianSP.f90  dynho_LinearAlgebra.f90  dynho_Main.f90  dynho_Main_assub.f90  dynho_Model.f90  dynho_Monitor.f90  dynho_Parameters.f90  dynho_Precision.f90  dynho_Rates.f90  dynho_Stoichiom.f90  dynho_StoichiomSP.f90  dynho_Util.f90  dynho_default.def  dynho_mex_Fun.f90  dynho_mex_Hessian.f90  dynho_mex_Jac_SP.f90  general.f90  kpp  readme.md  salloc_exe_kpp  volc.inp
nachmo_coding-main/nachmo_mlp/: Ssurrogate.py  chemical_constants_and_parameters.py  chemical_mechanism_selector.py  constansts_and_parameters_loader.py  crunches.py  dataloader.py  dataset.py  dev_env.yaml  exec.bash  find_the_best_loss.py  long_run_salloc.sh  loss.py  main.py  metrics.py  models.py  net_info.py  printing_results.py  reproduce.py  setting_hyperparameters_for_tb.py  tb.sh  train.py  utilities.py  visualization.py
nachmo_coding-main/notebooks/: example.ipynb  training.ipynb
(+60 files in other folders)
